@@ -1,5 +1,7 @@
 2005-08-14  Ales Hakl  <ales at hakl dot net>
 
+	* src/dfsch.c: Added eval and apply primitives
+
 	* src/load.c (dfsch_load_scm_fd): Split core from dfsch_load_scm
 	into separate function
 	(dfsch_load_scm_stream): stdio streams based version (aware of
